# call-record

./: .gitignore  README.md  local.env  pyproject.toml
api/: settings.py  urls.py
calls/: admin.py  models.py  serializers.py  urls.py  views.py
calls/migrations/: 0001_initial.py  0002_auto_20210329_1819.py
